# prompt-optimizer

./: .gitignore  .pdm-python  PromptOptimizer.spec  Prompt_Optimizer_Monorepo_Architecture_Overview__2025-08-19T08-33-30.md  README.md  build-onedir.spec  build.ps1  build.py  build.spec  nuitka_build.ps1  pyproject.toml  requirements.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: core_tasks.yml  deployment_tasks.yml  documentation_tasks.yml  testing_tasks.yml
.github/workflows/: ci.yml  docker.yml  python-ci.yml  test.yml
docs/: README.md  design.md  design_en.md  design_python.md  design_python_en.md  requirements.md  requirements_en.md  requirements_python.md  requirements_python_en.md  task.md  task_en.md  task_python.md  task_python_en.md
docs/developer/: poetry-to-pdm-migration.md  python-local-dev-build-guide.md
po_app/: main.py
po_app/EXE/Python_prompt-optimizer_V1.0.0/: Python_prompt-optimizer.spec
po_app/assets/i18n/: .gitkeep
po_app/core/: data_manager.py  history_manager.py  llm_service.py  model_manager.py  preference_service.py  prompt_service.py  template_manager.py
po_app/services/: compatible_client.py  gemini_client.py  openai_client.py
po_app/storage/: json_provider.py  sqlite_provider.py
po_app/ui/: history_tab.py  main_window.py  models_tab.py  prompt_tab.py  settings_tab.py  templates_tab.py
po_app/utils/: config.py  crypto.py  env.py  logs.py
tests/: conftest.py
tests/gui/: test_main_window.py  test_settings_prompt_integration.py
tests/integration/: test_prompt_workflow.py  test_ui_services_integration.py
tests/unit/: test_history_manager.py  test_llm_service.py  test_model_manager.py  test_prompt_service.py  test_sqlite_provider.py  test_sqlite_provider_crud.py  test_template_manager.py
