[tool.poetry]
name = "prompt-optimizer-python"
version = "0.1.0"
description = "Prompt Optimizer desktop application (Python, PySide6). Refactor of the original TS monorepo into a Python EXE."
authors = ["Prompt Optimizer Team <dev@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "po_app" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = ">=6.6"
openai = ">=1.40"
google-generativeai = ">=0.7"
httpx = ">=0.27"
tenacity = ">=8.2"
sqlalchemy = ">=2.0"
aiosqlite = ">=0.20"
cryptography = ">=42.0"
pydantic = ">=2.8"
loguru = ">=0.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-qt = ">=4.4"
pytest-cov = ">=5.0"
pyinstaller = ">=6.6"
black = ">=24.1"
flake8 = ">=7.0"

[tool.poetry.scripts]
prompt-optimizer = "po_app.main:main"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "dist", "build"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

