[project]
name = "prompt-optimizer-python"
version = "0.1.0"
description = "Prompt Optimizer desktop application (Python, PySide6). Refactor of the original TS monorepo into a Python EXE."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Prompt Optimizer Team", email = "dev@example.com" } ]
requires-python = ">=3.12,<3.13"

# runtime dependencies
dependencies = [
  "pyside6>=6.6",
  "openai>=1.40",
  "google-generativeai>=0.7",
  "httpx>=0.27",
  "tenacity>=8.2",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "cryptography>=42.0",
  "pydantic>=2.8",
  "loguru>=0.7",
]

[project.optional-dependencies]
# development / testing tools
dev = [
  "pytest>=8.2",
  "pytest-qt>=4.4",
  "pytest-cov>=5.0",
  "pyinstaller>=6.6",
  "black>=24.1",
  "flake8>=7.0",
]

[project.scripts]
prompt-optimizer = "po_app.main:main"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "dist", "build"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=po_app --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["pdm-backend>=2.4"]
build-backend = "pdm.backend"

